# Hulk-compiler

./: .gitignore  CMakeLists.txt  COMPLETION_NOTES.md  Makefile  README.md  REPORT.MD  REPORT.md  hulk  output  output.cpp  test.hulk
.github/workflows/: hulk-ci.yml
Hulk-compiler-main/: .gitignore  CMakeLists.txt
Hulk-compiler-main/src/: main.cpp
Hulk-compiler-main/src/ast/: AstPrinter.cpp  Expr.cpp
Hulk-compiler-main/src/backend/banner/: BannerGenerator.hpp
Hulk-compiler-main/src/backend/vm/: VM.cpp  VM.hpp  Value.cpp
Hulk-compiler-main/src/interpreter/: Interpreter.cpp
Hulk-compiler-main/src/parser/: Parser.cpp
docs/: compatibility.md
examples/: class.hulk  factorial.hulk  fibonacci.hulk  inheritance.hulk
src/: main.cpp
src/ast/: AstPrinter.cpp  AstPrinter.hpp  Expr.cpp  Expr.hpp  Stmt.cpp  Stmt.hpp
src/backend/: ASTSerializer.cpp  ASTSerializer.hpp  CodeGenerator.cpp  CodeGenerator.hpp
src/backend/banner/: BannerGenerator.cpp  BannerGenerator.hpp  BannerIR.cpp  BannerIR.hpp
src/backend/vm/: CallFrame.cpp  CallFrame.hpp  GC.hpp  OpCode.hpp  VM.cpp  VM.hpp  Value.cpp  Value.hpp
src/inferer/: TypeInferer.cpp  TypeInferer.hpp
src/interpreter/: Interpreter.cpp  Interpreter.hpp
src/parser/: Parser.cpp  Parser.hpp
src/resolver/: Resolver.cpp  Resolver.hpp
src/scanner/: Scanner.cpp  Scanner.h  Scanner.hpp  Token.cpp  Token.hpp
src/type/: Type.cpp  Type.hpp
tests/: CMakeLists.txt  test_scanner.cpp
tests/hulk/: run_tests.sh
tests/input/: 01_literals.hulk  02_arithmetic.hulk  03_strings.hulk  04_variables.hulk  05_scope.hulk  06_if.hulk  07_while.hulk  08_for.hulk  09_functions.hulk  10_classes.hulk  11_inheritance.hulk  12_factorial_complete.hulk  13_fibonacci_complete.hulk  14_math_utils.hulk
